--- a/components/grid.html
+++ b/components/grid.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>LaTeX Equations · ISLE Editor Documentation</title>
+        <title>Grid · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="video-player.html" />
+    <link rel="next" href="lesson-submit.md" />
     
     
-    <link rel="prev" href="timer.html" />
+    <link rel="prev" href="free-text-question.html" />
     
 
     </head>
@@ -336,7 +336,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="grid.html">
+        <li class="chapter active" data-level="1.4.7" data-path="grid.html">
             
                 <a href="grid.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.20" data-path="latex.html">
+        <li class="chapter " data-level="1.4.20" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -624,7 +624,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >LaTeX Equations</a>
+        <a href=".." >Grid</a>
     </h1>
 </div>
 
@@ -639,21 +639,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="latex-equations">LaTeX Equations</h1>
-<p><code>TeX</code> is an ISLE element that can be used to display LaTeX equations. Under the hood, the component uses <a href="https://github.com/Khan/KaTeX" target="_blank">KaTeX</a> for blazingly fast rendering.</p>
-<p>Example:</p>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">TeX</span>
-    <span class="hljs-attr">raw</span>=<span class="hljs-string">&quot;\int f(x) \; dx&quot;</span>
-    <span class="hljs-attr">displayMode</span>=<span class="hljs-string">{true}</span>
-/&gt;</span>
-</code></pre>
-<h2 id="options">Options:</h2>
-<ul>
-<li><strong>raw</strong>: The literal LaTeX <code>string</code> to render. Also accepts <code>numbers</code>. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>displayMode</strong>: <code>boolean</code> indicating whether to display the equation inline or in display mode. Default: <code>false</code>.</li>
-<li><strong>onClick</strong>: Callback <code>function</code> invoked whenever a user clicks on the equation. Default: <code>null</code>.</li>
-<li><strong>style</strong>: <code>object</code> with CSS key-value pairs to be applied to the equation container. Default: <code>{}</code>.</li>
-</ul>
+                                <h1 id="grid">Grid</h1>
 
                                 
                                 </section>
@@ -681,12 +667,12 @@
 
             
                 
-                <a href="timer.html" class="navigation navigation-prev " aria-label="Previous page: Timer">
+                <a href="free-text-question.html" class="navigation navigation-prev " aria-label="Previous page: Free Text Question">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="video-player.html" class="navigation navigation-next " aria-label="Next page: Video Player">
+                <a href="lesson-submit.md" class="navigation navigation-next " aria-label="Next page: Lesson Submit">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -697,7 +683,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"LaTeX Equations","level":"1.4.20","depth":2,"next":{"title":"Video Player","level":"1.4.21","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},"previous":{"title":"Timer","level":"1.4.19","depth":2,"path":"components/timer.md","ref":"components/timer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/latex.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:25:14.166Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Grid","level":"1.4.7","depth":2,"next":{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},"previous":{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/grid.md","mtime":"2016-11-11T08:25:03.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:25:14.166Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
