--- a/components/timer.html
+++ b/components/timer.html
@@ -266,9 +266,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2.5" data-path="text-input.md">
+        <li class="chapter " data-level="1.4.2.5" data-path="text-input.html">
             
-                <span>
+                <a href="text-input.html">
             
                     
                     Text Input
@@ -323,9 +323,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="free-text-question.md">
+        <li class="chapter " data-level="1.4.6" data-path="free-text-question.html">
             
-                <span>
+                <a href="free-text-question.html">
             
                     
                     Free Text Question
@@ -336,9 +336,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="grid.md">
+        <li class="chapter " data-level="1.4.7" data-path="grid.html">
             
-                <span>
+                <a href="grid.html">
             
                     
                     Grid
@@ -498,9 +498,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="slider.md">
+        <li class="chapter " data-level="1.4.16" data-path="slider.html">
             
-                <span>
+                <a href="slider.html">
             
                     
                     Slider
@@ -639,7 +639,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="timer-component">Timer Component</h1>
+                                <h1 id="timer">Timer</h1>
 <p>The Timer component provides a timer that will trigger a predefined callback when the time is up. An example use case is for the timing of quizzes.</p>
 <p>Example:</p>
 <pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">Timer</span> 
@@ -701,7 +701,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.19","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.20","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Text Area","level":"1.4.18","depth":2,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-11T08:21:57.666Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:22:08.581Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.19","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.20","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Text Area","level":"1.4.18","depth":2,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-11T08:23:45.172Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:25:14.166Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
